[project]
classifiers = ["Private :: Do Not Upload"]
name = "lbis-discord"
version = "0.1.0"
description = "A Discord bot implementing the lBIS project's API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord>=2.3.2",
]

[project.scripts]
lbis-bot = "bot:start"

[tool.setuptools]
py-modules = ["bot", "main", "state_manager"]
packages = ["cogs", "utils"]
